@@ -2,7 +2,7 @@ test_readBamGappedAlignments <- function()
 {
     fl <- system.file("extdata", "ex1.bam", package="Rsamtools")
     which <- RangesList(seq1=IRanges(1, width=100))
-    param <- ScanBamParam(what=character(0), which=which)
+    param <- ScanBamParam(which=which)
     result <- readBamGappedAlignments(fl, param=param)
     checkTrue(validObject(result))
     checkIdentical(c(seq1=1575L, seq2=1584L), seqlengths(result))
@@ -25,12 +25,12 @@ test_readBamGappedAlignments_length0 <- function()
     fl <- system.file("extdata", "ex1.bam", package="Rsamtools")
 
     which <- RangesList(seq1=IRanges(100000, width=100))
-    param <- ScanBamParam(what=character(0), which=which)
+    param <- ScanBamParam(which=which)
     result <- readBamGappedAlignments(fl, param=param)
     checkTrue(validObject(result))
 
     which <- RangesList(seq1=IRanges(c(1, 100000), width=100))
-    param <- ScanBamParam(what=character(0), which=which)
+    param <- ScanBamParam(which=which)
     result <- readBamGappedAlignments(fl, param=param)
     checkTrue(validObject(result))
 }
